deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Thu Nov 16 12:40:29 UTC 2023
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresortsx2
  name: modresortsx2
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: modresortsx2
