deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Thu Nov 16 12:40:29 UTC 2023
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresortsx2
  name: modresortsx2
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresortsx2
    weight: 100
